# GEDS

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .travis.yml  AUTHORS.md  CMakeLists.txt  CONTRIBUTORS.md  DEPENDENCIES  GEDS_CLA_Corporate.doc  GEDS_CLA_Individual.doc  README.md  build-aws-sdk.sh  build-boost.sh  build-docker-bc.sh  build-docker.sh  clang-format.sh  clang-tidy.sh  fix-newlines.sh  package_python.sh
.github/: CODEOWNERS  build-geds.sh  build-or-cache-grpc.sh
.travis/: build-geds.sh  build-or-cache-grpc.sh  build-public-images.sh
cmake/: grpc-helpers.cmake
doc/: BUILDING.md  GEDS Daemon Mode.md  geds_ansible.yml
docker/: Dockerfile-base_ubi8  (+14 more)
src/: CMakeLists.txt
src/benchmark/: CMakeLists.txt  main.cpp
src/benchmarks/: CMakeLists.txt  benchmark_io.cpp  read_with_pubsub.cpp  read_wo_pubsub.cpp  serve_pubsub.cpp  shuffle_read.cpp  shuffle_serve.cpp
src/common/: CMakeLists.txt  DirectoryMarker.cpp  DirectoryMarker.h  GEDSFileStatus.h
src/geds/: CMakeLists.txt  main.cpp
src/geds_cmd/: CMakeLists.txt  main.cpp
src/grpchelloworld/: CMakeLists.txt  client.cpp  helloworld.proto  server.cpp
src/java/: CMakeLists.txt  GEDSConfigContainer.h  JavaError.cpp  JavaError.h  Platform.cpp  com_ibm_geds_GEDS.cpp  com_ibm_geds_GEDSConfig.cpp  com_ibm_geds_GEDSFile.cpp  pom.xml.template
src/java/com/ibm/geds/: GEDS.java  GEDSConfig.java  GEDSFile.java  GEDSFileStatus.java
src/libgeds/: CMakeLists.txt  FileTransferProtocol.cpp  FileTransferProtocol.h  FileTransferService.cpp  FileTransferService.h  Filesystem.cpp  Filesystem.h  GEDS.cpp  GEDS.h  GEDSAbstractFileHandle.cpp  GEDSAbstractFileHandle.h  GEDSCachedFileHandle.cpp  GEDSCachedFileHandle.h  GEDSConfig.cpp  GEDSConfig.h  GEDSFile.cpp  GEDSFile.h  GEDSFileHandle.cpp  GEDSFileHandle.h  GEDSInternal.cpp  GEDSInternal.h  GEDSLocalFileHandle.h  GEDSMMapFileHandle.h  GEDSProtocol.cpp  GEDSProtocol.h  GEDSRelocatableFileHandle.cpp  GEDSRelocatableFileHandle.h  GEDSRemoteFileHandle.cpp  GEDSRemoteFileHandle.h  GEDSS3FileHandle.cpp  GEDSS3FileHandle.h  GEDSService.cpp  GEDSService.h  HttpServer.cpp  HttpServer.h  HttpSession.cpp  HttpSession.h  LocalFile.cpp  LocalFile.h  MMAPFile.cpp  (+20 more)
src/libgeds/tests/: CMakeLists.txt  test_Filesystem.cpp  test_GEDS.cpp  test_GEDSFile.cpp  test_GEDSFileHandle.cpp  test_GEDSS3FileHandle.cpp  test_TcpDataTransport.cpp
src/metadataservice/: CMakeLists.txt  Common.h  GRPCServer.cpp  GRPCServer.h  KVS.cpp  KVS.h  KVSBucket.cpp  KVSBucket.h  MDSHttpServer.cpp  MDSHttpServer.h  MDSHttpSession.cpp  MDSHttpSession.h  NodeInformation.cpp  NodeInformation.h  Nodes.cpp  Nodes.h  ObjectStoreHandler.cpp  ObjectStoreHandler.h  PubSubMQTT.h  S3Helper.cpp  S3Helper.h  main.cpp  test_KVS.cpp
src/metadataservice_go/: .dockerignore  .gitignore  CMakeLists.txt  Makefile  README.md  env.secret  go.mod  go.sum
src/metadataservice_go/cmd/mds/: start.go
src/metadataservice_go/cmd/mockclient/: start.go
src/metadataservice_go/configs/: app.env.secret
src/metadataservice_go/data/: placeholder.md
src/metadataservice_go/deployment/docker/compose/: gedsmds.docker-compose.yaml
src/metadataservice_go/deployment/docker/images/: geds-mds-go.dockerfile  gedsmds.dockerfile
src/metadataservice_go/deployment/docker/kubernetes/: gedsmds.k8s.yaml
src/metadataservice_go/docs/: BUILDING.md  build.md
src/metadataservice_go/internal/config/: config.go
src/metadataservice_go/internal/connection/connpool/: pool.go  pool_init.go
src/metadataservice_go/internal/connection/serverconfig/: connection_manager.go
src/metadataservice_go/internal/keyvaluestore/: keyvaluestore.go  keyvaluestore_structs.go  prefixtree.go  utilities.go
src/metadataservice_go/internal/keyvaluestore/db/: db_operation_leveldb.go  db_operation_leveldb_struct.go  utilities.go
src/metadataservice_go/internal/logger/: logger.go
src/metadataservice_go/internal/mdsprocessor/: mdsprocessor.go  mdsprocessor_structs.go
src/metadataservice_go/internal/mdsservice/: mdsservice.go  mdsservice_struct.go  utilities.go
src/metadataservice_go/internal/mockgedsclient/: executor.go
src/metadataservice_go/internal/prommetrics/: promotheus.go  promotheus_struct.go
src/metadataservice_go/internal/pubsub/: pubsub.go  pubsub_structs.go  utilities.go
src/metadataservice_go/protos/: geds.pb.go  geds.proto  geds_grpc.pb.go  status.pb.go  status.proto
src/metadataservice_go/protos/protos/: geds.pb.go  geds_grpc.pb.go  status.pb.go
src/metadataservice_go/tests/: 0_connection_test.go  1_objectstore_test.go  2_bucket_test.go  3_object_test.go  4_pubsub_test.go  bucket_test.go  mockserver.go  mockserverclient.go  object_test.go  objectstore_test.go
src/metadataservice_go/tests/configs/: app.env.secret
src/protos/: CMakeLists.txt  Object.h  ObjectStoreConfig.h  ParseGRPC.cpp  ParseGRPC.h  PubSub.h  Status.cpp  Status.h  geds.proto  status.proto
src/protos/tests/: CMakeLists.txt  test_parse_grpc.cpp
src/python/: CMakeLists.txt  create.py  folder_listing.py  metadata.py  metadata_read.py  read.py  s3.py  s3_compare_geds.py  s3_download.py  serve_benchmark.py  wrapper.cpp
src/python/geds_smart_open/: MANIFEST.in  README.md  pyproject.toml
src/python/geds_smart_open/src/: example.py
src/python/geds_smart_open/src/geds_smart_open/: __init__.py  geds.py
src/s3/: CMakeLists.txt  S3Endpoint.cpp  S3Endpoint.h  S3Init.cpp  S3Init.h  S3ObjectStores.cpp  S3ObjectStores.h
src/s3/tests/: CMakeLists.txt  test_S3Endpoint.cpp
src/statistics/: CMakeLists.txt  Statistics.cpp  Statistics.h  StatisticsCounter.cpp  StatisticsCounter.h  StatisticsGauge.cpp  StatisticsGauge.h  StatisticsHistogram.h  StatisticsItem.cpp  StatisticsItem.h
src/utility/: ByteStream.h  CMakeLists.txt  ConcurrentMap.h  ConcurrentQueue.h  ConcurrentSet.h  FormatISO8601.h  LogNullSink.cpp  LogNullSink.h  Logging.h  MDSKVS.cpp  MDSKVS.h  MDSKVSBucket.cpp  MDSKVSBucket.h  Path.cpp  Path.h  Platform.cpp  Platform.h  Ports.h  RWConcurrentObjectAdaptor.h  RecursiveMutexObjectAdaptor.h  Version.cpp.in  Version.h
src/utility/tests/: CMakeLists.txt  test_Path.cpp
(+11 files in other folders)
